# feature-interaction-graph

./: .gitignore  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  feature_interaction_graphs_deep_dive.md  pyproject.toml
examples/: extract_behavior.py  quick_start.py  steering_demo.py
feature_graph/: __init__.py  activations.py  analysis.py  candidates.py  cli.py  coactivation.py  config.py  graph.py  interactions.py  loading.py  steering.py  subgraphs.py  utils.py  visualization.py
notebooks/: worked_example.ipynb
tests/: test_core.py
